slight css, button spacing, remove a bunch and fix user.name reference

--- a/client/style.css
+++ b/client/style.css
@@ -3,6 +3,10 @@
     -webkit-filter: drop-shadow(10px 10px 10px rgba(250,250,250, 0.5)) !important;
     filter: drop-shadow(10px 10px 10px rgba(250,250,250, 0.5)) !important;
 }
+
+.button {
+  margin:.1em !important;
+}
  /*Mobile */
 @media only screen and (max-width: 767px) {
   .mobile.hidden,
